# bitv

./: bitv.opam  dune-project
.github/workflows/: build.yml
spec/: bitv_spec.mli  bitv_spec_config.ml  bitv_spec_tests.ml  dune  dune.bitv.inc
