opam-version: "2.0"
name: "bitv"
maintainer: "Jean-Christophe.Filliatre@cnrs.fr"
authors: "Jean-Christophe Filliâtre"
license: "LGPL-2.1-or-later"
synopsis: "A bit vector library for OCaml"
description: "A bit vector library for OCaml"
homepage: "https://github.com/backtracking/bitv"
bug-reports: "https://github.com/backtracking/bitv/issues"
doc: "https://backtracking.github.io/bitv"
depends: [
  "ocaml" {>= "4.03"}
  "dune" {>= "2.0.0"}
  "ortac-qcheck-stm" {>= "0.3.0"}
  "ortac-dune" {>= "0.3.0"}
]
pin-depends: [
  ["ortac-qcheck-stm.0.3.0" "git+https://github.com/nikolaushuber/ortac.git#fork-prop"]
  ["ortac-runtime-qcheck-stm.0.3.0" "git+https://github.com/nikolaushuber/ortac.git#fork-prop"]
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+https://github.com/backtracking/bitv.git"
